--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "antd": "^5.17.3",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-leaflet": "^4.2.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1"
   },
