--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-hook-form": "^7.51.5",
     "react-leaflet": "^4.2.1",
     "react-paginate": "^8.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
